--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.11.0",
+    "cache-manager": "^5.2.0",
+    "cache-manager-redis-yet": "^4.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
