--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
     restart: always
     ports:
       - 6379:6379
+    command: redis-server --requirepass ${REDIS_PASSWORD}
     volumes:
       - redis:/data
 
